--- a/SQL_HMDA.ipynb
+++ b/SQL_HMDA.ipynb
@@ -135,14 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 1000000 rows\n"
+      "Read 1000000 rows\n",
+      "Read 2000000 rows\n",
+      "Read 3000000 rows\n",
+      "Read 4000000 rows\n",
+      "Read 5000000 rows\n",
+      "Read 6000000 rows\n",
+      "[['CA', '265', '91'], ['CA', '417', '150'], ['OR', '148', '53'], ['FL', '264', '60'], ['ME', '285', '115']]\n"
      ]
     }
    ],
@@ -185,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,15 +210,17 @@
     "    for row in data:\n",
     "        # use try-except to filter out the rows that cannot be cleaned\n",
     "        try:\n",
-    "            \"\"\"__Your_Code_Here__\"\"\"\n",
+    "            cleaned_row = tuple(func(val) for func, val in zip(cleaners, row))\n",
+    "\n",
     "\n",
     "        except ValueError as e:\n",
     "            # some values in the row are invalid, so discard the row\n",
-    "            \"\"\"__Your_Code_Here__\"\"\"\n",
+    "            n_rows_discarded += 1\n",
     "\n",
     "        else:\n",
     "            # all values in the row are valid, so append the cleaned row\n",
-    "            \"\"\"__Your_Code_Here__\"\"\"\n",
+    "            cleaned_data.append(cleaned_row)\n",
+    "            n_rows_cleaned += 1\n",
     "            \n",
     "\n",
     "    return cleaned_data, (n_rows_cleaned, n_rows_discarded)"
@@ -231,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +253,10 @@
     "    # state_abbrs is a set of all the state abbreviations\n",
     "    # you can use it to check if a state abbreviation is valid\n",
     "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    s = (column_value or \"\").strip().upper()\n",
+    "    if len(s) != 2 or s not in state_abbrs:\n",
+    "        raise ValueError(\"Invalid State Abbreviation\")\n",
+    "    return s\n",
     "\n",
     "def clean_loan_amount(column_value):\n",
     "    \"\"\"\n",
@@ -255,6 +267,11 @@
     "    \"\"\"\n",
     "    # convert to integer\n",
     "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    s = (column_value or \"\").strip()\n",
+    "    if s == \"\":\n",
+    "        raise ValueError(\"Empty Loan Amount\")\n",
+    "    s.replace(\",\",\"\")\n",
+    "    return int(s)\n",
     "\n",
     "def clean_applicant_income(column_value):\n",
     "    \"\"\"\n",
@@ -264,7 +281,12 @@
     "    EXCEPTION: ValueError, if the applicant income is not an integer\n",
     "    \"\"\"\n",
     "    # convert to integer\n",
-    "    \"\"\"__Your_Code_Here__\"\"\""
+    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    s = (column_value or \"\").strip()\n",
+    "    if s == \"\":\n",
+    "        raise ValueError(\"Empty Applicant Income\")\n",
+    "    s.replace(\",\",\"\")\n",
+    "    return int(s)"
    ]
   },
   {
@@ -276,9 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('CA', 265, 91), ('CA', 417, 150), ('OR', 148, 53), ('FL', 264, 60), ('ME', 285, 115)]\n",
+      "5627881 485542\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # The code in this cell calls the functions defined above.\n",
@@ -1571,9 +1602,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python (miniforge base)",
    "language": "python",
-   "name": "python3"
+   "name": "miniforge-base"
   },
   "language_info": {
    "codemirror_mode": {
