--- a/SQL_HMDA.ipynb
+++ b/SQL_HMDA.ipynb
@@ -378,7 +378,11 @@
     "    # iterate through the cleaned data\n",
     "    for row in cleaned_data:\n",
     "        # update the statistics using the checkers\n",
-    "        \"\"\"__Your_Code_Here__\"\"\"\n",
+    "        for i, value in enumerate(row):\n",
+    "            checker = checkers[i]\n",
+    "            stats_dict = final_stats[i]\n",
+    "            # update the stats with this column’s checker\n",
+    "            final_stats[i] = checker(value, stats_dict)\n",
     "    return final_stats"
    ]
   },
