--- a/SQL_HMDA.ipynb
+++ b/SQL_HMDA.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +61,8 @@
     "# user-defined module to get all the states' abbreviations\n",
     "from util import state_abbrs\n",
     "\n",
+    "#another import\n",
+    "import numpy as np\n",
     "#import sys, mysql.connector\n",
     "#print(mysql.connector.__version__)\n",
     "#print(sys.executable)"
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,18 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('CA', 265, 91), ('CA', 417, 150), ('OR', 148, 53), ('FL', 264, 60), ('ME', 285, 115)]\n",
-      "5627881 485542\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # The code in this cell calls the functions defined above.\n",
@@ -360,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1712,7 @@
     "    \"\"\"\n",
     "\n",
     "    # convert the high_risk_percentage to a dictionary\n",
-    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    high_risk_dict = dict(high_risk_percentage)\n",
     "\n",
     "    # extract the states, average loan amounts, average applicant incomes, sizes, and colors\n",
     "    states = []\n",
@@ -1727,18 +1720,25 @@
     "    avg_incomes = []\n",
     "    sizes = []\n",
     "    colors = []\n",
-    "\n",
-    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    for state, (loan, income) in avg_loan_income_by_state.items()\n",
+    "        states.append(state)\n",
+    "        avg_loans.append(loan)\n",
+    "        avg_incomes.append(income)\n",
+    "        sizes.append(np.sqrt(state_abbr_stat[state]) * 10)  \n",
+    "        colors.append(high_risk_dict.get(state, 0)) \n",
     "\n",
     "    # increase the size of the plot to avoid crowding\n",
     "    plt.figure(figsize=(15, 10))\n",
     "    # use ggplot style. it's gray background, easy for colors to stand out\n",
     "    plt.style.use('ggplot')\n",
     "\n",
+    "    \n",
     "    # plot the average loan amount and average applicant income by state\n",
-    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    scatter = plt.scatter(avg_loans, avg_incomes, s=sizes, c=colors, cmap='copper_r', alpha=0.8, edgecolors=\"k\")\n",
+    "\n",
     "    # add horizontal and vertical lines for the average loan amount and average applicant income of all applicants\n",
-    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    plt.axvline(x=avg_loan_income[0], color='black', linestyle='--')\n",
+    "    plt.axhline(y=avg_loan_income[1], color='black', linestyle='--')\n",
     "\n",
     "    # add state names to the plot\n",
     "    for i, state_abbr in enumerate(states):\n",
@@ -1773,9 +1773,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python (miniforge base)",
    "language": "python",
-   "name": "python3"
+   "name": "miniforge-base"
   },
   "language_info": {
    "codemirror_mode": {
