--- a/SQL_HMDA (1).ipynb
+++ b/SQL_HMDA (1).ipynb
@@ -1774,7 +1774,7 @@
     "    \"\"\"\n",
     "\n",
     "    # convert the high_risk_percentage to a dictionary\n",
-    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    high_risk_dict = dict(high_risk_percentage)\n",
     "\n",
     "    # extract the states, average loan amounts, average applicant incomes, sizes, and colors\n",
     "    states = []\n",
@@ -1782,18 +1782,25 @@
     "    avg_incomes = []\n",
     "    sizes = []\n",
     "    colors = []\n",
-    "\n",
-    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    for state, (loan, income) in avg_loan_income_by_state.items()\n",
+    "        states.append(state)\n",
+    "        avg_loans.append(loan)\n",
+    "        avg_incomes.append(income)\n",
+    "        sizes.append(np.sqrt(state_abbr_stat[state]) * 10)  \n",
+    "        colors.append(high_risk_dict.get(state, 0)) \n",
     "\n",
     "    # increase the size of the plot to avoid crowding\n",
     "    plt.figure(figsize=(15, 10))\n",
     "    # use ggplot style. it's gray background, easy for colors to stand out\n",
     "    plt.style.use('ggplot')\n",
     "\n",
+    "    \n",
     "    # plot the average loan amount and average applicant income by state\n",
-    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    scatter = plt.scatter(avg_loans, avg_incomes, s=sizes, c=colors, cmap='copper_r', alpha=0.8, edgecolors=\"k\")\n",
+    "\n",
     "    # add horizontal and vertical lines for the average loan amount and average applicant income of all applicants\n",
-    "    \"\"\"__Your_Code_Here__\"\"\"\n",
+    "    plt.axvline(x=avg_loan_income[0], color='black', linestyle='--')\n",
+    "    plt.axhline(y=avg_loan_income[1], color='black', linestyle='--')\n",
     "\n",
     "    # add state names to the plot\n",
     "    for i, state_abbr in enumerate(states):\n",
