--- a/SQL_HMDA (1).ipynb
+++ b/SQL_HMDA (1).ipynb
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1782,7 @@
     "    avg_incomes = []\n",
     "    sizes = []\n",
     "    colors = []\n",
-    "    for state, (loan, income) in avg_loan_income_by_state.items()\n",
+    "    for state, (loan, income) in avg_loan_income_by_state.items():\n",
     "        states.append(state)\n",
     "        avg_loans.append(loan)\n",
     "        avg_incomes.append(income)\n",
@@ -1796,7 +1796,7 @@
     "\n",
     "    \n",
     "    # plot the average loan amount and average applicant income by state\n",
-    "    scatter = plt.scatter(avg_loans, avg_incomes, s=sizes, c=colors, cmap='copper_r', alpha=0.8, edgecolors=\"k\")\n",
+    "    plt.scatter(avg_loans, avg_incomes, s=sizes, c=colors, cmap='copper_r', alpha=0.8, edgecolors=\"k\")\n",
     "\n",
     "    # add horizontal and vertical lines for the average loan amount and average applicant income of all applicants\n",
     "    plt.axvline(x=avg_loan_income[0], color='black', linestyle='--')\n",
