--- a/SQL_HMDA (1).ipynb
+++ b/SQL_HMDA (1).ipynb
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,7 +1399,8 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    ALTER TABLE {table_name}\n",
+    "    ADD COLUMN high_loan_flag BOOLEAN NOT NULL DEFAULT FALSE;\n",
     "    \"\"\""
    ]
   },
@@ -1447,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,7 +1461,9 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    UPDATE {table_name}\n",
+    "    SET high_loan_flag = TRUE\n",
+    "    WHERE loan_amount > {loan_threshold};\n",
     "    \"\"\""
    ]
   },
@@ -1498,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,7 +1513,7 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    WHERE high_loan_flag = 1;\n",
     "    \"\"\""
    ]
   },
@@ -1554,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1578,8 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    ALTER TABLE {table_name}\n",
+    "    ADD COLUMN risk_flag VARCHAR(2) NOT NULL DEFAULT 'H';\n",
     "    \"\"\""
    ]
   },
@@ -1623,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1641,12 @@
     "\n",
     "    low, mod = low_mod_high_thresholds\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    UPDATE {table_name}\n",
+    "    SET risk_flag = CASE\n",
+    "        WHEN loan_amount / applicant_income <= {low} THEN 'L'\n",
+    "        WHEN loan_amount / applicant_income <= {mod} THEN 'M'\n",
+    "        ELSE 'H'\n",
+    "    END;\n",
     "    \"\"\"\n"
    ]
   },
@@ -1716,7 +1725,14 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    SELECT\n",
+    "        state_abbr,\n",
+    "        ROUND(\n",
+    "            SUM(CASE WHEN risk_flag = 'H' THEN 1 ELSE 0 END) / COUNT(*),\n",
+    "            2\n",
+    "        ) AS high_risk_percentage\n",
+    "    FROM {table_name}\n",
+    "    GROUP BY state_abbr;\n",
     "    \"\"\""
    ]
   },
@@ -1835,7 +1851,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1849,7 +1865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
