Revert "Update SQL_HMDA (1).ipynb"
This reverts commit e12918af2107a75f2857cd786d8c3d23de8c5f3a.

--- a/SQL_HMDA (1).ipynb
+++ b/SQL_HMDA (1).ipynb
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,7 +1772,7 @@
     "        avg_loan_income, tuple(float, float), the average loan amount and average applicant income for all applicants\n",
     "        high_risk_percentage, list[tuple(str, float)], the percentage of high-risk applicants per state\n",
     "    \"\"\"\n",
-    "    import numpy as np\n",
+    "\n",
     "    # convert the high_risk_percentage to a dictionary\n",
     "    high_risk_dict = dict(high_risk_percentage)\n",
     "\n",
@@ -1835,9 +1835,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (miniforge base)",
+   "display_name": "base",
    "language": "python",
-   "name": "miniforge-base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
