--- a/SQL_HMDA (1).ipynb
+++ b/SQL_HMDA (1).ipynb
@@ -1399,7 +1399,8 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    ALTER TABLE {table_name}\n",
+    "    ADD COLUMN high_loan_flag BOOLEAN NOT NULL DEFAULT FALSE;\n",
     "    \"\"\""
    ]
   },
@@ -1460,7 +1461,9 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    UPDATE {table_name}\n",
+    "    SET high_loan_flag = TRUE\n",
+    "    WHERE loan_amount > {loan_threshold};\n",
     "    \"\"\""
    ]
   },
@@ -1510,7 +1513,7 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    WHERE high_loan_flag = 1;\n",
     "    \"\"\""
    ]
   },
@@ -1575,7 +1578,8 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    ALTER TABLE {table_name}\n",
+    "    ADD COLUMN risk_flag VARCHAR(2) NOT NULL DEFAULT 'H';\n",
     "    \"\"\""
    ]
   },
@@ -1637,7 +1641,12 @@
     "\n",
     "    low, mod = low_mod_high_thresholds\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    UPDATE {table_name}\n",
+    "    SET risk_flag = CASE\n",
+    "        WHEN loan_amount / applicant_income <= {low} THEN 'L'\n",
+    "        WHEN loan_amount / applicant_income <= {mod} THEN 'M'\n",
+    "        ELSE 'H'\n",
+    "    END;\n",
     "    \"\"\"\n"
    ]
   },
@@ -1716,7 +1725,14 @@
     "    \"\"\"\n",
     "\n",
     "    return f\"\"\"\n",
-    "    __Your_Code_Here__\n",
+    "    SELECT\n",
+    "        state_abbr,\n",
+    "        ROUND(\n",
+    "            SUM(CASE WHEN risk_flag = 'H' THEN 1 ELSE 0 END) / COUNT(*),\n",
+    "            2\n",
+    "        ) AS high_risk_percentage\n",
+    "    FROM {table_name}\n",
+    "    GROUP BY state_abbr;\n",
     "    \"\"\""
    ]
   },
@@ -1760,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,7 +1788,7 @@
     "        avg_loan_income, tuple(float, float), the average loan amount and average applicant income for all applicants\n",
     "        high_risk_percentage, list[tuple(str, float)], the percentage of high-risk applicants per state\n",
     "    \"\"\"\n",
-    "\n",
+    "    import numpy as np\n",
     "    # convert the high_risk_percentage to a dictionary\n",
     "    high_risk_dict = dict(high_risk_percentage)\n",
     "\n",
